Fix movie hero layout and spacing

--- a/components/styles/movie-hero.scss
+++ b/components/styles/movie-hero.scss
@@ -2,18 +2,28 @@
   background-color: #111111;
   box-shadow: 0px 3px 11px 0px rgba(0,0,0,0.75);
   border-radius: 20px;
-  padding: 2rem;
-  justify-content: space-around;
   margin-top: 8rem;
 
+  & > .columns {
+    justify-content: space-around;
+    padding: 2rem;
+  }
+
   &.has-trailer {
-    margin-top: 80vh;
+    // Subtract navbar and padding
+    margin-top: calc(80vh - 4.25rem);
   }
 
   @supports ((backdrop-filter: blur(30px))) or (-webkit-backdrop-filter: blur(30px)) {
     background-color: rgba(0, 0, 0, 0.3);
     backdrop-filter: blur(30px);
     -webkit-backdrop-filter: blur(30px);
+  }
+
+  .title-summary-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
   }
 }
 
